tests/golden/error/private_use_not_exported/middle.tg
// Middle module: uses source item privately (no pub).

use source::secret_fn;

pub fn wrapper() -> Nat { secret_fn() }
